--- a/apps/backend/.env.sample
+++ b/apps/backend/.env.sample
@@ -24,6 +24,17 @@ TASKER_INTEGRATION.RESEND_API_KEY="resend_key"
 TASKER_REDIS.ADDRESS="redis://localhost:6379"
 
 # ============================================================================
+# AWS CONFIGURATION
+# ============================================================================
+
+TASKER_AWS.REGION="apac"
+TASKER_AWS.ACCESS_KEY_ID=""
+TASKER_AWS.SECRET_ACCESS_KEY=""
+TASKER_AWS.UPLOAD_BUCKET="tasker-bucket"
+TASKER_AWS.ENDPOINT_URL=""
+
+
+# ============================================================================
 # OBSERVABILITY CONFIGURATION
 # ============================================================================
 
