--- a/apps/frontend/nixpacks.toml
+++ b/apps/frontend/nixpacks.toml
@@ -1,17 +1,20 @@
 [phases.setup]
 nixPkgs = ['nodejs_22', 'bun']
+aptPkgs = ['git']
 
 [phases.install]
+workDir = '/app'
 cmds = [
-    'cd ../.. && bun install --frozen-lockfile',
-    'cd ../.. && bun run build --filter=@tasker/openapi --filter=@tasker/zod'
+    'bun install --frozen-lockfile',
+    'bun run build --filter=@tasker/openapi --filter=@tasker/zod'
 ]
 
 [phases.build]
+workDir = '/app/apps/frontend'
 cmds = ['bun run build']
 
 [start]
-cmd = 'bun run preview -- --port ${PORT:-3000} --host 0.0.0.0'
+cmd = 'cd /app/apps/frontend && bun run preview -- --port ${PORT:-3000} --host 0.0.0.0'
 
 [variables]
 NODE_ENV = 'production'
