--- a/apps/backend/.env.sample
+++ b/apps/backend/.env.sample
@@ -22,6 +22,7 @@ TASKER_AUTH.SECRET_KEY="secret"
 TASKER_INTEGRATION.RESEND_API_KEY="resend_key"
 
 TASKER_REDIS.ADDRESS="redis://localhost:6379"
+TASKER_REDIS.PASSWORD=
 
 # ============================================================================
 # AWS CONFIGURATION
